tests/baselines/reference/ParameterList6.errors.txt
==== tests/cases/compiler/ParameterList6.ts (1 errors) ====
    class C {
      constructor(C: (public A) => any) {
                      ~~~~~~
!!! ParameterList6.ts(2,19): error TS2246: A parameter property is only allowed in a constructor implementation.
      }
    }